[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/MainMenuUI.gd" type="Script" id=1]

[node name="MainMenuUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
margin_right = 109.0
margin_bottom = 20.0
text = "Start Game"

[node name="HostGameButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 109.0
margin_bottom = 44.0
text = "Host Game"

[node name="JoinGameButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 109.0
margin_bottom = 68.0
text = "Join Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateQuizButton" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 109.0
margin_bottom = 92.0
text = "Create Quiz"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownloadQuizButton" type="Button" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 109.0
margin_bottom = 116.0
text = "Download Quiz"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitGameButton" type="Button" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 109.0
margin_bottom = 140.0
text = "Quit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HostGameButton" to="." method="_on_HostGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinGameButton" to="." method="_on_JoinGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreateQuizButton" to="." method="_on_CreateQuizButton_pressed"]
[connection signal="pressed" from="VBoxContainer/DownloadQuizButton" to="." method="_on_DownloadQuizButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitGameButton" to="." method="_on_QuitGameButton_pressed"]
